syntax = "proto3";

// 命 令 号: 1003
// 命令名称: servo_wheel_set
// 命令描述: 恒速轮模式
// 文件名称: d3c1003_srv_wheel_set.proto

// 以下是 Android 生成对应 Java 所需信息
option java_package = "com.ubtedu.deviceconnect.libs.ukit.smart.protobuffer";
option java_outer_classname = "PbServoWheelSet";

message ServoWheelSetRequest {
  // ATTR: REQUSET
  sint32 rotating_speed = 1;  //转动速度，单位：0.1°/s，
}

message ServoWheelSetResponse {

}
